# PowerPlatform-DataverseClient-Python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  scratch_finops_smoketest.py  step2_smoketest.py
.claude/skills/dataverse-sdk-dev/: SKILL.md
.claude/skills/dataverse-sdk-use/: SKILL.md
examples/: README.md
examples/advanced/: file_upload.py  relationships.py  sql_examples.py  walkthrough.py
examples/basic/: functional_testing.py  installation_example.py
src/PowerPlatform/Dataverse/: __version__.py  client.py
src/PowerPlatform/Dataverse/claude_skill/dataverse-sdk-dev/: SKILL.md
src/PowerPlatform/Dataverse/claude_skill/dataverse-sdk-use/: SKILL.md
src/PowerPlatform/Dataverse/core/: _error_codes.py  _http.py  config.py
src/PowerPlatform/Dataverse/data/: _batch.py  _odata.py  _relationships.py
src/PowerPlatform/Dataverse/models/: __init__.py  filters.py  labels.py  query_builder.py  relationship.py  table_info.py  upsert.py
src/PowerPlatform/Dataverse/operations/: batch.py  dataframe.py  query.py  records.py  tables.py
src/PowerPlatform/FinOps/: __init__.py  _auth.py  _http.py  client.py  errors.py
src/PowerPlatform/FinOps/operations/: __init__.py  metadata.py  records.py
tests/finops/: test_metadata.py  test_records.py  test_records_list.py
tests/unit/: test_client.py  test_client_dataframe.py  test_client_deprecations.py  test_context_manager.py  test_dataframe_operations.py  test_operation_context.py  test_query_operations.py  test_records_operations.py  test_tables_operations.py
tests/unit/data/: test_batch_serialization.py  test_enum_optionset_payload.py  test_list_columns.py  test_odata_internal.py  test_relationships.py  test_sql_guardrails.py  test_sql_parse.py
tests/unit/models/: test_filters.py  test_labels.py  test_query_builder.py  test_relationship.py
