[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "PowerPlatform-Dataverse-Client"
version = "0.1.0b4"
description = "Python SDK for Microsoft Dataverse"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Microsoft Corporation"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["dataverse", "powerapps", "powerplatform", "crm", "dynamics", "odata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "azure-identity>=1.17.0",
    "azure-core>=1.30.2",
    "requests>=2.32.0",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/PowerPlatform-DataverseClient-Python"
"Repository" = "https://github.com/microsoft/PowerPlatform-DataverseClient-Python.git"
"Issues" = "https://github.com/microsoft/PowerPlatform-DataverseClient-Python/issues"
"Documentation" = "https://github.com/microsoft/PowerPlatform-DataverseClient-Python#readme"

[project.scripts]
dataverse-install-claude-skill = "PowerPlatform.Dataverse._skill_installer:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["PowerPlatform*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed"]
"PowerPlatform.Dataverse.claude_skill" = ["*/SKILL.md"]

# Microsoft Python Standards - Linting & Formatting
[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
]
